--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     
                 </li>
                 <li>
-                    <a href="CONTACT.html">contato</a>
+                    <a href="https://api.whatsapp.com/send?phone=5511989422970&text=Muito%20obrigado%20!!%20por%20entrar%20em%20contato%20">contato</a>
                 </li>
             </ul>
         </nav>
@@ -38,18 +38,27 @@
             <h2>Desenvolvedor de software</h2>
         </header-container>
         <main>
+            
             <h3>Sobre mim</h3>
             <p></p>
             <h3>Formacão</h3>
-            <p></p>
+            <p>Analise e desenvolvimento de sistemas 
+                cursando 1 periodo
+                Uniasselvi
+            </p>
             <h3>Cursos</h3>
             <p></p>
         </main>
         <footer>
             <a href="https://www.linkedin.com/in/kaique-da-silva-97896524b/" target="_blank" rel="noopener noreferrer">
-                <img src="C:\Users\kaique lindo\Desktop\easy portifolio\img\linkedin.svg">
+                <img src="./img/icons8-linkedin-48.png">
        <p>linkedin</p>
             </a>
+            <a href="https://github.com" target="_blank" rel="noopener noreferrer">
+                <img src="./img/icons8-github-48.png" >
+        <p>Github</p>
+            </a>
+
         </footer>
     </div>
    
