--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     
                 </li>
                 <li>
-                    <a href="https://api.whatsapp.com/send?phone=5511989422970&text=Muito%20obrigado%20!!%20por%20entrar%20em%20contato%20">contato</a>
+                    <a href="https://api.whatsapp.com/send?phone=5511989422970&text=Ol%C3%A1%20Kaique,%20tudo%20bem?%20">contato</a>
                 </li>
             </ul>
         </nav>
